# Cozy2DMultiplayerGame

./: .gitignore  CMakeLists.txt  README.md
include/: Player.hpp
src/: main.cpp  player.cpp
